# sauron

./: .gitignore  README.md
agentwatch/: Cargo.toml
agentwatch/src/: main.rs  model.rs  scan.rs  store.rs  ui.rs
docs/: AGENTS.md
sauron/: Cargo.toml
sauron/src/: agent.rs  codex.rs  handoff.rs  main.rs  model.rs  scan.rs  scene.rs  store.rs  ui.rs  workspace.rs
sauron/src/clip/: mod.rs  store.rs
sauron/tests/: clip_cli.rs
workspace/: workspace.sh
