[package]
name = "agentwatch"
version = "0.1.0"
edition = "2021"

# Standalone sidecar with its own lockfile. Keep it out of any parent Cargo
# workspace -- building agentwatch must never perturb the host project's build.

[dependencies]
# ratatui re-exports the crossterm version it was built against; depending on
# it through ratatui::crossterm avoids the classic version-skew breakage.
ratatui = "0.29"
serde_json = "1"

[profile.release]
opt-level = 2
