[package]
name = "sauron"
version = "0.1.0"
edition = "2021"

# Standalone sidecar with its own lockfile. Keep it out of any parent Cargo
# workspace -- building sauron must never perturb the host project's build.

[dependencies]
# ratatui re-exports the crossterm version it was built against; depending on
# it through ratatui::crossterm avoids the classic version-skew breakage.
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = 2
